--- a/tests/cassettes/test_metrics/test_get_v1_metrics_symbol_listing.yaml
+++ b/tests/cassettes/test_metrics/test_get_v1_metrics_symbol_listing.yaml
@@ -1,36 +1,34 @@
 interactions:
-  - request:
-      body:
-      headers:
-        Accept:
-          - application/json;q=1, text/json;q=0.8, text/plain;q=0.5, application/x-msgpack;q=0
-        X-CoinAPI-Key:
-          - OBFUSCATED
-        user-agent:
-          - coinapi-sdk/python 0.1.0 v1 CoinAPI
-      method: GET
-      uri: https://rest.coinapi.io/v1/metrics/symbol/listing?exchange_id=BINANCE
-    response:
-      body:
-        string: '[]'
-      headers:
-        content-type:
-          - application/json; charset=utf-8
-        date:
-          - Tue, 05 Mar 2024 00:29:42 GMT
-        transfer-encoding:
-          - chunked
-        vary:
-          - Accept-Encoding
-        x-concurrencylimit-limit:
-          - '1'
-        x-concurrencylimit-remaining:
-          - '1'
-        x-ratelimit-limit:
-          - '100'
-        x-ratelimit-request-cost:
-          - '0'
-      status:
-        code: 200
-        message: OK
+- request:
+    body: ''
+    headers:
+      X-CoinAPI-Key:
+      - OBFUSCATED
+      accept:
+      - application/json;q=1, text/json;q=0.8, text/plain;q=0.5, application/x-msgpack;q=0
+      host:
+      - rest.coinapi.io
+      user-agent:
+      - coinapi-rest/python 0.0.1 CoinAPI v1
+    method: GET
+    uri: https://rest.coinapi.io/v1/metrics/symbol/listing?exchange_id=BINANCE
+  response:
+    content: '[]'
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Wed, 06 Mar 2024 22:21:43 GMT
+      transfer-encoding:
+      - chunked
+      x-concurrencylimit-limit:
+      - '1'
+      x-concurrencylimit-remaining:
+      - '1'
+      x-ratelimit-limit:
+      - '100'
+      x-ratelimit-request-cost:
+      - '0'
+    http_version: HTTP/1.1
+    status_code: 200
 version: 1
