--- a/pyproject.toml
+++ b/pyproject.toml
@@ -207,7 +207,7 @@ dev = [
 
 [tool.pdm.scripts]
 lint = "pre-commit run --all-files --color always"
-test = "coverage run -m pytest"
+test = "coverage run -m pytest -m 'not network'"
 # this will run after the `test` command
 post_test = { composite = ["coverage report", "coverage xml"] }
 
