--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,6 +208,6 @@ dev = [
 [tool.pdm.scripts]
 lint = "pre-commit run --all-files --color always"
 test = "coverage run -m pytest -m 'not network'"
+test-network = "coverage run -m pytest -m network"
 # this will run after the `test` command
 post_test = { composite = ["coverage report", "coverage xml"] }
-
