--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ command_line = "--module pytest"
 data_file = "reports/.coverage"
 source = ["src"]
 
+[tool.coverage.paths]
+source = ["src/", "/home/runner/**/src", "D:\\**\\src"]
+
 [tool.coverage.report]
 fail_under = 50
 precision = 1
