--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,9 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: 💚 ci
+      include: "scope"
 
   - package-ecosystem: "pip"
     directory: "/"
