--- a/pyproject.toml
+++ b/pyproject.toml
@@ -211,7 +211,7 @@ test = [
   "syrupy>=0.0.15",
 ]
 dev = [
-  "ipython>=8.12.3",
+  "ipython!=8.18.0",
   "commitizen>=3.16.0",
   "cz-conventional-gitmoji>=0.2.4",
   "pre-commit>=3.6.2",
