--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ version = "0.0.4"
 description = "CoinAPI Python REST Client"
 authors = [{ name = "ljnsn", email = "info@ljnsn.com" }]
 dependencies = [
-  "typing-inspect>=0.9.0",
-  "msgspec>=0.18.6",
   "httpx>=0.27.0",
+  "msgspec>=0.18.6",
   "python-dotenv>=1.0.1",
+  "typing-inspect>=0.9.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -203,17 +203,17 @@ markers = ["network: mark a test as needing a network connection"]
 distribution = true
 
 [tool.pdm.dev-dependencies]
-lint = ["ruff>=0.3.0", "mypy>=1.8.0"]
+lint = ["mypy>=1.8.0", "ruff>=0.3.0"]
 test = [
-  "pytest>=8.0.0",
-  "pytest-recording>=0.13.1",
   "coverage>=7.4.3",
+  "pytest-recording>=0.13.1",
+  "pytest>=8.0.0",
   "syrupy>=0.0.15",
 ]
 dev = [
-  "ipython!=8.18.0",
   "commitizen>=3.16.0",
   "cz-conventional-gitmoji>=0.2.4",
+  "ipython!=8.18.0",
   "pre-commit>=3.6.2",
 ]
 
