--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=ljnsn_coinapi-rest
 sonar.organization=ljnsn
+sonar.python.version=">=3.10"
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=coinapi-rest
