--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=ljnsn_coinapi-rest
 sonar.organization=ljnsn
 sonar.python.version=">=3.10"
+sonar.python.coverage.reportPaths=reports/coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=coinapi-rest
