--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.projectKey=ljnsn_coinapi-rest
 sonar.organization=ljnsn
 sonar.python.version=">=3.10"
 sonar.python.coverage.reportPaths=reports/coverage.xml
+sonar.sources=src/
+sonar.tests=tests/
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=coinapi-rest
