--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,14 +4,11 @@ sonar.python.version=">=3.10"
 sonar.python.coverage.reportPaths=reports/coverage.xml
 sonar.sources=src/
 sonar.tests=tests/
+sonar.projectVersion=0.0.4
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=coinapi-rest
 #sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
