💚 ci: upload correct coverage file

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ matrix.platform }}-${{ matrix.python-version }}
-          path: reports/.coverage
+          path: reports/coverage.xml
 
   coveralls-finish:
     needs: [python-test]
