--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -70,7 +70,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ matrix.platform }}-${{ matrix.python-version }}
-          path: reports/coverage.xml
+          path: reports/.coverage
+          include-hidden-files: true
 
   coveralls-finish:
     needs: [python-test]
@@ -92,6 +93,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Install coverage
+        run: pip install coverage
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: reports
+          pattern: coverage-*
+          merge-multiple: true
+      - name: Combine coverage
+        run: |
+          coverage combine reports
+          coverage xml
       - name: Generate sonar properties
         run: |
           cat << EOF > sonar-project.properties
