--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -98,7 +98,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install coverage
-        run: pip install coverage
+        run: pip install coverage[toml]
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
