🔧 config(coverage): add workaround for source path issue
for the issue see [1]
for the workaround see [2]

[1]: https://github.com/nedbat/coveragepy/issues/578
[2]: https://github.com/LibraryOfCongress/concordia/pull/857/files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,9 +59,8 @@ warn_unreachable = true
 branch = true
 command_line = "--module pytest"
 data_file = "reports/.coverage"
-source = ["src"]
-# include = ["src/*"]
-# omit = ["tests/*"]
+include = ["src/*"]
+omit = ["tests/*"]
 
 [tool.coverage.paths]
 source = ["src/"]
@@ -71,8 +70,8 @@ fail_under = 50
 precision = 1
 show_missing = true
 skip_covered = true
-# include = ["src/*"]
-# omit = ["tests/*"]
+include = ["src/*"]
+omit = ["tests/*"]
 
 [tool.coverage.xml]
 output = "reports/coverage.xml"
