--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,22 +3,24 @@ name: Python package
 on:
   push:
     branches:
+      - "main"
+  pull_request:
+    branches:
+      - "**"
+    types: [opened, synchronize, reopened]
+  create:
+    branches:
       - "**"
 
 jobs:
   python-lint:
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-        platform: [ubuntu-latest]
-      fail-fast: false
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
       - uses: actions/cache@v4
         id: cache
         with:
@@ -33,6 +35,11 @@ jobs:
         run: python -m pdm install -G lint -G dev
       - name: Lint
         run: python -m pdm run lint
+      - name: Archive lint reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: lint-reports
+          path: reports
 
   python-test:
     strategy:
@@ -71,6 +78,7 @@ jobs:
         with:
           name: coverage-${{ matrix.platform }}-${{ matrix.python-version }}
           path: reports/.coverage
+          include-hidden-files: true
 
   coveralls-finish:
     needs: [python-test]
@@ -85,13 +93,27 @@ jobs:
 
   sonarcloud:
     needs: [python-test]
-    if: ${{ always() }}
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Install coverage
+        run: pip install coverage[toml]
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-ubuntu-latest-3.12
+          path: reports
+      - name: Create coverage XML
+        run: |
+          ls -al reports
+          coverage xml
       - name: Generate sonar properties
         run: |
           cat << EOF > sonar-project.properties
