📦️ package: switch to uv

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,10 +64,10 @@ repos:
     hooks:
       - id: conventional-gitmoji
 
-  - repo: https://github.com/pdm-project/pdm
-    rev: 2.19.2
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.4.19
     hooks:
-      - id: pdm-lock-check
+      - id: uv-lock
 
   - repo: local
     hooks:
