--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,12 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/coinapi"]
+
+[tool.hatch.build.targets.sdist]
+include = ["src", "pyproject.toml", "README.md"]
+
 [project]
 name = "coinapi-rest"
 version = "0.0.5"
@@ -215,10 +221,3 @@ addopts = """--color=yes --doctest-modules --exitfirst --failed-first \
 filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
 testpaths = ["src", "tests"]
 markers = ["network: mark a test as needing a network connection"]
-
-[tool.pdm.scripts]
-lint = "pre-commit run --all-files --color always"
-test = "coverage run -m pytest -m 'not network'"
-test-network = "coverage run -m pytest -m network"
-# this will run after the `test` command
-post_test = { composite = ["coverage report", "coverage xml"] }
