--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,24 +17,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+
       - uses: actions/cache@v4
         id: cache
         with:
           path: ${{ env.pythonLocation }}
           key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-root
-      - name: Install pdm
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install pdm>=2.11.1
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
       - name: Install Dependencies
-        run: python -m pdm install -G lint -G dev
+        run: uv sync --only-dev --frozen
+
       - name: Lint
         run: python -m pdm run lint
+
       - name: Archive lint reports
         uses: actions/upload-artifact@v4
         with:
@@ -44,35 +47,39 @@ jobs:
   python-test:
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
         platform: [ubuntu-latest, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
       - uses: actions/cache@v4
         id: cache
         with:
           path: ${{ env.pythonLocation }}
           key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-root
-      - name: Install pdm
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install pdm>=2.11.1
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
       - name: Install Dependencies
-        run: python -m pdm install -dG test
+        run: uv sync --only-dev --frozen
+
       - name: Test
         run: python -m pdm run test
+
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@v2
         with:
           flag-name: run-${{ join(matrix.*, '-') }}
           parallel: true
+
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
@@ -99,21 +106,24 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Install coverage
-        run: pip install coverage[toml]
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: coverage-ubuntu-latest-3.12
           path: reports
+
       - name: Create coverage XML
-        run: |
-          ls -al reports
-          coverage xml
+        run: uv run coverage xml
+
       - name: Generate sonar properties
         run: |
           cat << EOF > sonar-project.properties
