--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -47,7 +47,7 @@ jobs:
   python-test:
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12"]
         platform: [ubuntu-latest, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.platform }}
