--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -72,6 +72,7 @@ jobs:
         run: uv sync --only-dev --frozen
 
       - name: Test
+        shell: bash
         run: ./scripts/test.sh
 
       - name: Coveralls Parallel
