📦️ package: switch to uv (#24)
* 📦️ package: switch to uv

* 🔥 dump: pdm lock

* 🔧 config(hatch): add build targets

* 🔨 script: add scripts as pdm scripts replacements

* 💚 ci: update pipeline to use uv

* 💚 ci: replace pdm commands

* 💚 ci: drop tests for 3.13

* 💚 ci: make bash default shell

* 🔨 script(test): use uv in script

* 💚 ci: call script directly

* 💚 ci: specify shell

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/coinapi"]
+
+[tool.hatch.build.targets.sdist]
+include = ["src", "pyproject.toml", "README.md"]
+
 [project]
 name = "coinapi-rest"
 version = "0.0.5"
@@ -29,9 +39,19 @@ classifiers = [
   "Typing :: Typed",
 ]
 
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+[tool.uv]
+dev-dependencies = [
+  "commitizen>=3.16.0",
+  "coverage>=7.4.3",
+  "cz-conventional-gitmoji>=0.2.4",
+  "ipython!=8.18.0",
+  "mypy>=1.8.0",
+  "pre-commit>=3.6.2",
+  "pytest-recording>=0.13.1",
+  "pytest>=8.0.0",
+  "ruff>=0.3.0",
+  "syrupy>=0.0.15",
+]
 
 [tool.commitizen]
 name = "cz_gitmoji"
@@ -201,28 +221,3 @@ addopts = """--color=yes --doctest-modules --exitfirst --failed-first \
 filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
 testpaths = ["src", "tests"]
 markers = ["network: mark a test as needing a network connection"]
-
-[tool.pdm]
-distribution = true
-
-[tool.pdm.dev-dependencies]
-lint = ["mypy>=1.8.0", "ruff>=0.3.0"]
-test = [
-  "coverage>=7.4.3",
-  "pytest-recording>=0.13.1",
-  "pytest>=8.0.0",
-  "syrupy>=0.0.15",
-]
-dev = [
-  "commitizen>=3.16.0",
-  "cz-conventional-gitmoji>=0.2.4",
-  "ipython!=8.18.0",
-  "pre-commit>=3.6.2",
-]
-
-[tool.pdm.scripts]
-lint = "pre-commit run --all-files --color always"
-test = "coverage run -m pytest -m 'not network'"
-test-network = "coverage run -m pytest -m network"
-# this will run after the `test` command
-post_test = { composite = ["coverage report", "coverage xml"] }
