--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -18,6 +18,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - uses: pdm-project/setup-pdm@v4
-      - name: Publish package distributions to PyPI
-        run: pdm publish
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+
+      - name: Install dependencies
+        run: uv sync --frozen
+
+      - name: Publish
+        env:
+          UV_PUBLISH_TOKEN: ${{ secrets.POETRY_PYPI_TOKEN_PYPI }}
+        run: |
+          ./scripts/publish.sh
