--- a/.forgejo/workflows/pythonpackage.yml
+++ b/.forgejo/workflows/pythonpackage.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   python-lint:
-    runs-on: ubuntu-latest
+    runs-on: docker
     steps:
       - uses: actions/checkout@v4
 
@@ -48,9 +48,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        platform: [ubuntu-latest, windows-latest]
       fail-fast: false
-    runs-on: ${{ matrix.platform }}
+    runs-on: docker
     steps:
       - uses: actions/checkout@v4
 
@@ -91,7 +90,7 @@ jobs:
   coveralls-finish:
     needs: [python-test]
     if: ${{ always() }}
-    runs-on: ubuntu-latest
+    runs-on: docker
     steps:
       - name: Coveralls Finished
         uses: coverallsapp/github-action@v2.2.3
@@ -102,7 +101,7 @@ jobs:
   sonarcloud:
     needs: [python-test]
     name: SonarCloud
-    runs-on: ubuntu-latest
+    runs-on: docker
     steps:
       - uses: actions/checkout@v4
         with:
@@ -143,7 +142,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   bump-version:
-    runs-on: ubuntu-latest
+    runs-on: docker
     needs: [python-lint, python-test]
     if: |
       github.event_name == 'push' &&
