--- a/.forgejo/workflows/pythonpublish.yml
+++ b/.forgejo/workflows/pythonpublish.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   pypi-publish:
     name: upload release to PyPI
-    runs-on: ubuntu-latest
+    runs-on: docker
     permissions:
       # This permission is needed for private repositories.
       contents: read
